--- a/index.html
+++ b/index.html
@@ -42,22 +42,19 @@
           <div class="weather-app-temperature-container">
             <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weatehr-app-unit">°C</div>
+            <div class="weather-app-unit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
+
 
       <footer>
         This project was coded by
-        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
-        is
-        <a href="https://github.com/matthieua/meteo" target="_blank"
-          >open-sourced on GitHub</a
-        >
-        and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
-          >hosted on Netlify</a
-        >
+          <a href="https://github.com/misstembiio" target="_blank">Zethembile khoza</a> and is
+          <a href="https://github.com/misstembiio/myawesomeproject" target="_blank"> on GitHub</a> and
+          <a href="https://myawesomeproject.netlify.app/" target="_blank">hosted on Netlify</a>
+        
       </footer>
     </div>
     <script src="script.js"></script>
